<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 除上传图片外的所有内容框 -->
            <LinearLayout
                android:id="@+id/add_theme_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:clickable="true"
                android:orientation="vertical">
                <RelativeLayout
                    android:background="@color/themecolor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <ImageButton
                        android:id="@+id/btn_publish_back"
                        android:scaleType="centerInside"
                        android:layout_width="50dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/backbtn"
                        android:background="@color/transparent"
                        android:layout_height="30dp" />
                    <!--标题-->
                    <TextView
                        android:text="@string/add_forum"
                        android:textSize="20dp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <EditText
                    android:id="@+id/forum_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/forum_title"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/lightgray"
                    android:padding="5dp"
                    android:textSize="14sp">
                    <requestFocus />
                </EditText>

                <LinearLayout
                    android:id="@+id/theme_desc_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/forum_content_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"
                        android:background="@color/lightgray"
                        android:hint="@string/forum_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:padding="5dp"
                        android:textSize="14sp"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btn_add_photo"
                    android:src="@drawable/btn_camera"
                    android:background="@color/transparent"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <shacus.edu.seu.com.shacus.View.Custom.ImgAddGridView
                    android:id="@+id/add_image_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:isScrollContainer="false"
                    android:layout_marginBottom="100dp"
                    android:cacheColorHint="#00000000"
                    android:fadingEdge="none"
                    android:stretchMode="columnWidth"
                    android:listSelector="#00000000"
                    android:numColumns="4"
                    android:scrollbars="none" />

            </LinearLayout>



            <!-- 已添加的图片的小图 -->
            <RelativeLayout
                android:id="@+id/show_upload_pic_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="gone"
                >
                <ListView
                    android:id="@+id/theme_listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cacheColorHint="#00000000"
                    android:divider="@color/black"
                    android:dividerHeight="10dp"
                    android:fadingEdge="none"
                    android:listSelector="#00000000" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <!-- 点开已添加的图片查看大图 -->

    <!-- 发表按钮 -->
    <FrameLayout
        android:id="@+id/layout_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#ccE6BF66">
        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/themecolor"
            android:text="@string/upload"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </FrameLayout>

    <!-- 拍照、选择本地图片的底部悬浮菜单 -->

</FrameLayout>