<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/backbtn"
            android:background="@drawable/backbtn"

            android:layout_margin="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"

            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />
        <TextView

            android:text="编辑资料"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wheat"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp" />
        <ImageButton
            android:id="@+id/finishbtn"
            android:background="@drawable/finish_btn"

            android:layout_margin="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"

            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/transparent"
        />

  <RelativeLayout
      android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
      android:background="@color/aliceblue">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"

        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black_v1_p80"
        android:text="头像"/>
      <shacus.edu.seu.com.shacus.View.CircleImageView


          android:id="@+id/imageData_UserImage"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/head1"
          android:layout_centerVertical="true"
          android:layout_alignParentRight="true"
          android:layout_marginRight="10dp"
          />
  </RelativeLayout>
       <TextView
            android:layout_width="match_parent"
             android:layout_height="3dp"
             android:textColor="@color/transparent"
        />

<!--<RelativeLayout
    android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:background="@color/aliceblue">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_v1_p80"
            android:text="个人主页背景"/>
    <shacus.edu.seu.com.shacus.View.SquareImageView
        android:visibility="visible"
        android:id="@+id/edit_display_background"
        android:scaleType="centerCrop"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:src="@drawable/holder_square"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>
</RelativeLayout>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/button3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:background="@color/aliceblue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"

        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black_v1_p80"
        android:text="昵称"/>
        <EditText
            android:maxLines="1"
            android:visibility="visible"
            android:id="@+id/edit_textData_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:hint="昵称"
            android:textColorHint="#95A1AA"
            android:selectAllOnFocus="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/black_v1_p80"
            />
</RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />
    <RelativeLayout
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aliceblue">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_v1_p80"
            android:text="性别"/>
        <TextView
            android:visibility="visible"
            android:id="@+id/edit_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black_v1_p80"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"

            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"

            android:text="女"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />
    <RelativeLayout
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aliceblue">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_v1_p80"
            android:text="地区"/>
        <EditText
            android:maxLines="1"
            android:visibility="visible"
            android:id="@+id/edit_textData_Local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:hint="地区"
            android:textColorHint="#95A1AA"
            android:selectAllOnFocus="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/black_v1_p80"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aliceblue">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_v1_p80"
            android:text="签名"
            />
        <EditText
            android:maxLines="1"
            android:visibility="visible"
            android:id="@+id/edit_textData_UserSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black_v1_p80"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="个人签名"
            android:textColorHint="#95A1AA"
            android:selectAllOnFocus="true"
            android:textCursorDrawable="@null"/>










    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aliceblue">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_v1_p80"
            android:text="邮箱"
            />
        <EditText
            android:maxLines="1"
            android:visibility="visible"
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black_v1_p80"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="邮箱"
            android:textColorHint="#95A1AA"
            android:selectAllOnFocus="true"
            android:textCursorDrawable="@null"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aliceblue">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_v1_p80"

            android:text="手机号"
            />
        <EditText
            android:maxLines="1"
            android:visibility="visible"
            android:id="@+id/edit_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black_v1_p80"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="输入手机号"
            android:textColorHint="#95A1AA"
            android:selectAllOnFocus="true"
            android:textCursorDrawable="@null"/>

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:textColor="@color/transparent"
        />
    <!-- 拍照、选择本地图片的底部悬浮菜单 -->
    <FrameLayout
        android:id="@+id/edit_photo_fullscreen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:clickable="true"
        android:layout_gravity="bottom"
        android:focusable="true"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/edit_photo_outer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/edit_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/take_picture_layout_round_corner_bg"
                android:orientation="vertical" >
                <View style="@style/horizontal_divider" >
                </View>
                <TextView
                    android:id="@+id/take_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/take_picture"
                    android:textColor="@color/zero_black"
                    android:textSize="20sp" />

                <View style="@style/horizontal_divider" >
                </View>

                <TextView
                    android:id="@+id/select_local_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/select_local_picture"
                    android:textColor="@color/zero_black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_photo_layout"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/cancel_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/video_order_layout_round_corner_bg"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/cancel"
                    android:textColor="@color/zero_black"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>


</LinearLayout>